little 500 race admin page, statistics, add/remove racers
